--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,9 +16,9 @@ formats: []
 python:
    version: 3.7
    install:
+     requirements: docs/requirements.txt
      - method: pip
        path: .
-       extra_requirements: docs/requirements.txt
      - method: setuptools
        path: .
    system_packages: true
