--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,7 +16,7 @@ formats: []
 python:
    version: 3.7
    install:
-     requirements: docs/requirements.txt
+     - requirements: docs/requirements.txt
      - method: pip
        path: .
      - method: setuptools
